[gd_scene load_steps=7 format=3 uid="uid://bxq1mnjbcjkj1"]

[ext_resource type="Script" path="res://environment/florescentlight.gd" id="1_3ud4b"]
[ext_resource type="ArrayMesh" uid="uid://bldtvcm18efg3" path="res://environment/objects/fluorescent_light_case/Fluorecent_Light_Case_LP.obj" id="2_gqxft"]
[ext_resource type="ArrayMesh" uid="uid://btu86wogjxqn1" path="res://environment/objects/fluorescent_light_tube/LightTube_LP.obj" id="3_s2hnc"]
[ext_resource type="AudioStream" uid="uid://s4eydfqv1f00" path="res://audio/fluorescent-clinking1.wav" id="4_wxs50"]
[ext_resource type="AudioStream" uid="uid://r0ianggupm4b" path="res://audio/fluorescent-switch.wav" id="5_lsgtv"]
[ext_resource type="AudioStream" uid="uid://vlohxh2uu7i5" path="res://audio/fluorescent-buzz.wav" id="6_dy7ul"]

[node name="florescentlight" type="Node3D" groups=["electrical"]]
transform = Transform3D(0.075, 0, 0, 0, -3.27835e-09, -0.075, 0, 0.075, -3.27835e-09, 0, 0, 0)
script = ExtResource("1_3ud4b")
power_consumption = 0.2

[node name="CaseMesh" type="MeshInstance3D" parent="."]
mesh = ExtResource("2_gqxft")

[node name="Tube1Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0.713728, 1.82629)
mesh = ExtResource("3_s2hnc")

[node name="Tube2Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, -0.705616, 1.81936)
mesh = ExtResource("3_s2hnc")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, -8.52651e-15, 0, 8.52651e-15, 1, 0, 2.18557e-07, 5)
light_color = Color(0.957556, 0.714504, 0.500296, 1)
light_energy = 3.0
shadow_enabled = true
shadow_blur = 7.111
distance_fade_begin = 20.0
omni_range = 8.0

[node name="OnTimer" type="Timer" parent="."]

[node name="OffTimer" type="Timer" parent="."]

[node name="ClinkingTimer" type="Timer" parent="."]

[node name="ClinkingAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_wxs50")
volume_db = -20.0

[node name="SwitchAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_lsgtv")
volume_db = -30.0

[node name="BuzzingAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_dy7ul")
volume_db = -10.0
max_distance = 20.0
